# zjctl

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/zjctl/: Cargo.toml  README.md
crates/zjctl-proto/: Cargo.toml  README.md
crates/zjctl-proto/src/: lib.rs  protocol.rs  selector.rs
crates/zjctl/src/: client.rs  main.rs  zellij.rs
crates/zjctl/src/commands/: action.rs  doctor.rs  install.rs  mod.rs  pane.rs  panes.rs  status.rs
crates/zjctl/tests/: zellij_integration.rs
crates/zrpc/: Cargo.toml  README.md
crates/zrpc/src/: main.rs  state.rs
scripts/: smoke-test.sh
