[workspace]
resolver = "2"
members = [
    "crates/zjctl",
    "crates/zjctl-proto",
    "crates/zrpc",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["zjctl contributors"]
repository = "https://github.com/mrshu/zjctl"

[workspace.dependencies]
# Shared
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"
regex = "1.0"

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# Plugin
zellij-tile = "0.43"

# Internal
zjctl-proto = { path = "crates/zjctl-proto", version = "0.1.2" }
