[package]
name = "zrpc"
description = "Zellij RPC plugin for zjctl"
readme = "README.md"
keywords = ["zellij", "plugin", "rpc", "wasm"]
categories = ["wasm"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
zjctl-proto.workspace = true
zellij-tile.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
